k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cviche-ingress
  annotations:
    # Use the AWS Load Balancer Controller
    kubernetes.io/ingress.class: alb                                      
    # Keep it internal for now                         
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=500
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # Routes traffic directly to Pod IPs (more efficient)                                                     
    alb.ingress.kubernetes.io/target-type: ip
    # Health check path for your FastAPI backend
    alb.ingress.kubernetes.io/healthcheck-path: /livez
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          # Backend Route               
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          # Frontend Route (Catch-all)                            
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cviche-frontend-svc
                port:
                  number: 80
